# Embedded

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  requirements.txt
CAD/Control_box/: LRS-100-12.ipt  Main_box.ipt  Pi camera module3.ipt  RPI5.iam  RPi5_fan.iam  Upper_box.ipt  control_box.iam
CAD/Control_box/OldVersions/: Lower_box.0001.ipt  Lower_box수정중.0003.ipt  Upper_box.0005.ipt  control_box.0010.iam
CAD/Link/: Conect_link_Right.ipt  Conect_link_left.ipt  End_effector.ipt  End_effector_all.iam  End_effector_cover.ipt  Hinge.iam  Hinge_Sunvisor_arm.ipt  Hinge_Sunvisor_leg.ipt  Main_servo_arm.ipt  Main_survo.iam  plate.ipt  경첩 모터 결합.iam
CAD/Link/OldVersions/: Conect_link_Right.0002.ipt  Conect_link_left.0003.ipt  End_effector_all.0013.iam  Hinge(수정중).0005.ipt  Hinge.0005.iam  Hinge_servo_arm.0006.ipt  end_effector.0004.ipt  end_effector_cover.0007.ipt  hinge.0010.ipt  hinge_leg.0011.ipt  plate.0001.ipt  (+1 more)
CAD/Rail_combined/: ArduinoMega.ipt  Mini_servo.ipt  Rail_20cm.ipt  Rail_guide_block.ipt  Rail_guide_braket.ipt  Rail_lower_case.iam  Rail_lower_case.ipt  Rail_lower_case.stp  Rail_lower_case_돌출부.ipt  Rail_part.iam  Rail_pully.ipt  Rail_pully_cover.ipt  Rail_pully_cover.stp  Rail_pully_cover_reverse.ipt  Rail_pully_cover_reverse.stp  Rail_step.ipt  Rail_step_cover.ipt  Rail_upper_case.ipt  Step_4234.ipt  Sun_visor.ipt
CAD/sg90-micro-servo-9g-tower-pro-1.snapshot.3/: SG90 - Micro Servo 9g - Tower Pro.1.SLDPRT  SG90 - Micro Servo 9g - Tower Pro.2.SLDPRT  SG90 - Micro Servo 9g - Tower Pro.3.SLDPRT  SG90 - Micro Servo 9g - Tower Pro.5.SLDPRT  SG90 - Micro Servo 9g - Tower Pro.6.SLDPRT  SG90 - Micro Servo 9g - Tower Pro.SLDASM  SG90 - Micro Servo 9g - Tower Pro.STEP  SG90 - Micro Servo 9g - Tower Pro.x_t
ard_tmp/: arduino.ino
calibration/: README.md  calibration.py
camera_detection/: CMakeLists.txt
camera_detection/src/: SunDetector.cpp  return_position.cpp
glare_detection/: CMakeLists.txt
glare_detection/include/: SunDetector.h  glare_detector.h  glare_detector.hpp  glare_utils.hpp  gps_utils.hpp  return_position.h
glare_detection/src/: SunDetector.cpp  glare_detector.cpp  glare_utils.cpp  gps_utils.cpp  main.cpp  return_position.cpp
gt_labels/: original_jpg.rf.0422113c395d41cc0cdd70a468141978.txt  vid-14_png.rf.9b8568660f613ee20e3fe82dc9cdfaeb.txt  vid-3_png.rf.254b88f167d6b9a221bd54e11dc0c6e3.txt  vid-4_png.rf.a531ffbc7d8a61b64c2c81a6e4ef92cb.txt
src/sunvisor_system/: README.md  sunvisor_system.py
src_tmp/: CMakeLists.txt  README.md
src_tmp/src/coordinate_mapping/: CMakeLists.txt
src_tmp/src/coordinate_mapping/include/: config.hpp  coordinates.hpp  get_grid_size.hpp
src_tmp/src/coordinate_mapping/src/: coordinates.cpp  test_main.cpp  test_serial_main.cpp
src_tmp/src/glare_detection/: CMakeLists.txt
src_tmp/src/glare_detection/include/: SunDetector.h  glare_detector.h  return_position.h
src_tmp/src/glare_detection/src/: SunDetector.cpp  glare_detector.cpp  glare_evaluate.cpp  main.cpp  main_serial.cpp  return_position.cpp
src_tmp/src/glare_detection/src/gt_labels/: 2246939_jpg.rf.4e999ef8448307b5f532e04b864eed2e.txt  360_F_1201209786_INci68Ntwaq2dLi3KstaVitksIPT8T7I_jpg.rf.1d3fd9521a0be89ffe7cb5ab1e23de65.txt  GOPR0457-converted-006-workersAhead-start2920_mp4_image13_png.rf.2c95d19a40ebd916a5f1d5eb9f40ea5b.txt  depositphotos_545717648-stock-photo-sunset-taken-road_jpg.rf.1935efa77b23ebbcad1e691f84ebe1a3.txt  frame_004500_jpg.rf.e0c76d7ce57c642a398b2b6f583553d5.txt  try_020_jpg.rf.f1236caef2960b668a5c952fde7f4ad5.txt  try_024_jpg.rf.2550162cf7b6b36987acb32c54c48369.txt  try_024_jpg.rf.e425f7bb68cd6ab91b59999506c0d03e.txt  try_040_jpg.rf.46a345bad2b2bde245c79fd0da072e50.txt  try_044_jpg.rf.eff1e71ff571c8be4b1ed70c4d55353c.txt  try_044_jpg.rf.fd0ac99e2c3cf919dfcaf5ca01b47501.txt  vid-14_png.rf.0b6e1c884daa072d7fb70017e69e7a69.txt  vid-16_png.rf.b387f8d6c47f2fe5b7243ea8875df976.txt  vid-22_png.rf.866e56e30c0e20d52212642be01922e7.txt  vid-30-_png.rf.afe0ed775c4dce825dc66ee89385faae.txt  vid-3_png.rf.906102ed58e5d0edfbbc5129ac254b74.txt  vid-4-_png.rf.0c42c4336d529b29099feb944b1af3d9.txt  vid-4-_png.rf.8aee45f29edde88e6152e7dc5be96f5e.txt  vid-5_png.rf.eea33fcac5ea9b2dd01cad002d53f04a.txt  vid-7-_png.rf.13047234f4ee9584bf44184de06c9a75.txt  vid-8-glare-_png.rf.85b3204de8f3945af9322227ad55c743.txt  vid-8_png.rf.548822a9e91ddd4835d1cf2752bfd867.txt  vid2_png.rf.ac220d4a50c486810d1359fcdd411595.txt
src_tmp/src/serial_communication/: CMakeLists.txt
src_tmp/src/serial_communication/include/: serial_communication.hpp
src_tmp/src/serial_communication/src/: serial_communication.cpp
sunvisor_system/: main.py
sunvisor_system/mapping/: coordinates.py
tests/test_sunvisor_system/: test_coordinate.py
(+45 files in other folders)
